# Ai-Council

./: .gitignore  BACKEND_MILESTONE_COMPLETE.md  README.md  SETUP_COMPLETE.md  pyproject.toml
.kiro/specs/ai-council/: design.md  requirements.md  tasks.md
ai_council/: __init__.py
ai_council/analysis/: __init__.py  decomposer.py  engine.py
ai_council/arbitration/: __init__.py  layer.py
ai_council/core/: __init__.py  interfaces.py  models.py
ai_council/execution/: __init__.py
ai_council/orchestration/: __init__.py
ai_council/routing/: __init__.py
ai_council/synthesis/: __init__.py
ai_council/utils/: config.py  logging.py
backend/: .env.example  .gitignore  API_KEYS_QUICK_START.md  AUTHENTICATION_MIDDLEWARE.md  CLOUD_AI_INTEGRATION_SUMMARY.md  CLOUD_AI_VERIFICATION_REPORT.md  COST_CALCULATION_IMPLEMENTATION.md  DYNAMIC_PROVIDER_SELECTION_COMPLETE.md  OPENAI_INTEGRATION_COMPLETE.md  OPENROUTER_INTEGRATION_COMPLETE.md  ORCHESTRATION_TEST_COMPLETE.md  PROVIDER_CONFIG_IMPLEMENTATION.md  PROVIDER_COST_TRACKING_COMPLETE.md  PROVIDER_HEALTH_MONITORING_COMPLETE.md  QWEN_INTEGRATION_COMPLETE.md  README.md  TESTING.md  TOGETHER_INTEGRATION_COMPLETE.md  WEBSOCKET_IMPLEMENTATION.md  pyproject.toml  run_tests.ps1  run_tests.sh  setup.ps1  setup.sh  test_api.py  test_minimal.py  test_ollama_adapter.py  test_openai_integration.py  test_openrouter_integration.py  test_orchestration_multi_provider.py  test_provider_config.py  test_provider_health.py  test_qwen_integration.py  test_server.py  test_simple.py  test_together_integration.py  verify_cloud_ai_integration.py
backend/alembic/: env.py
backend/alembic/versions/: 20240101_0000_initial_schema.py  20240108_add_provider_cost_tracking.py
backend/app/: __init__.py  main.py
backend/app/api/: admin.py  auth.py  council.py  example_protected.py  user.py
backend/app/core/: config.py  database.py  middleware.py  provider_config.py  redis.py  security.py
backend/app/models/: __init__.py  base.py  provider_cost.py  request.py  response.py  subtask.py  user.py
backend/app/services/: council_orchestration_bridge.py  provider_cost_tracker.py  provider_health_checker.py
backend/app/services/cloud_ai/: README.md  __init__.py  adapter.py  gemini_adapter.py  groq_client.py  huggingface_client.py  model_registry.py  ollama_client.py  openai_adapter.py  openai_client.py  openrouter_adapter.py  openrouter_client.py  qwen_adapter.py  qwen_client.py  together_adapter.py  together_client.py
backend/docs/: API_KEYS_SETUP.md  DYNAMIC_PROVIDER_SELECTION.md  GEMINI_SETUP.md  HUGGINGFACE_SETUP.md  OLLAMA_SETUP.md  OPENAI_SETUP.md  OPENROUTER_SETUP.md  ORCHESTRATION_TEST_RESULTS.md  PROVIDER_CONFIGURATION.md  PROVIDER_COST_TRACKING.md  PROVIDER_HEALTH_MONITORING.md  QWEN_SETUP.md  TOGETHER_SETUP.md
backend/tests/: __init__.py  conftest.py  test_auth_endpoints.py  test_auth_endpoints_unit.py  test_auth_middleware.py  test_auth_middleware_unit.py  test_council_endpoints.py  test_database_schema.py  test_dynamic_provider_selection.py  test_email_validation.py  test_jwt_tokens.py  test_password_hashing.py  test_provider_cost_tracking.py  test_provider_health_monitoring.py  test_request_completion.py  test_request_validation.py  test_websocket_establishment.py
config/: ai_council_example.yaml
frontend/: .env.local.example  README.md  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/components/admin/: system-monitoring.tsx
frontend/components/landing/: cta-section.tsx  demo-query-interface.tsx  features-section.tsx  footer.tsx  hero-section.tsx  how-it-works-section.tsx  navigation.tsx  orchestration-visualization.tsx
frontend/hooks/: use-demo-rate-limit.ts
tests/: __init__.py  conftest.py  test_config.py  test_core_models.py  test_logging.py
